--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
         </ul>
+        <form class="navbar-form navbar-right" action="/action_page.php">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Search</button>
+        </form>
     </div>
 </nav>
 
@@ -40,7 +46,7 @@
                 <i class="material-icons" draggable="true" style="font-size:60px;color:black;">panorama_fish_eye</i>
             </div>
             <div class="col-xs-6 text-center">
-                <i class="material-icons" draggable="true" style="font-size:60px;color:black;">crop_5_4</i>
+                <i class="material-icons" draggable="true" style="font-size:60px;color:black;">change_history</i>
             </div>
         </div>
         <div class="col-xs-10">
