--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
     <div class="row">
         <div class="col-xs-2" id="toolbar">
             <div class="col-xs-6 text-center">
-                <i class="material-icons" draggable="true" style="font-size:60px;color:black;">crop_square</i>
+                <i class="material-icons button" draggable="true" ondragend="square()" style="font-size:60px;color:black;">crop_square</i>
             </div>
             <div class="col-xs-6 text-center">
-                <i class="material-icons" draggable="true" style="font-size:60px;color:black;">crop_5_4</i>
+                <i class="material-icons button" draggable="true" ondragend="rectangle()" style="font-size:60px;color:black;">crop_5_4</i>
             </div>
             <div class="col-xs-6 text-center">
-                <i class="material-icons" draggable="true" style="font-size:60px;color:black;">panorama_fish_eye</i>
+                <i class="material-icons button" draggable="true" ondragend="circle()" style="font-size:60px;color:black;">panorama_fish_eye</i>
             </div>
             <div class="col-xs-6 text-center">
-                <i class="material-icons" draggable="true" style="font-size:60px;color:black;">change_history</i>
+                <i class="material-icons button" draggable="true" ondragend="triangle()" style="font-size:60px;color:black;">change_history</i>
             </div>
         </div>
         <div class="col-xs-10">
