--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <div class="col-xs-6 text-center">
                 <i class="material-icons button" draggable="true" ondragend="triangle()" style="font-size:60px;color:black;">change_history</i>
             </div>
+            <div class="col-xs-6 text-center">
+                <i class="material-icons button" draggable="true" ondragend="line()" style="font-size:60px;color:black;">remove</i>
+            </div>
         </div>
         <div class="col-xs-10">
             <div id="canvas"></div>
