--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-
+<input type="color" id="palette" name="color" value="#e66465" />
 <script src="canvas.js"></script>
 </body>
 </html>
