--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
         </ul>
-        <form class="navbar-form navbar-right" action="/action_page.php">
+        <form class="navbar-form navbar-right" action="">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" id="inputText" class="form-control" placeholder="Text">
             </div>
-            <button type="submit" class="btn btn-default">Search</button>
+            <input type="button" onclick="addText(document.getElementById('inputText').value)" class="btn btn-default" value="Add text">
         </form>
     </div>
 </nav>
@@ -47,6 +47,9 @@
             </div>
             <div class="col-xs-6 text-center">
                 <i class="material-icons button" draggable="true" ondragend="triangle()" style="font-size:60px;color:black;">change_history</i>
+            </div>
+            <div class="col-xs-6 text-center">
+                <i class="material-icons button" draggable="true" ondragend="star()" style="font-size:60px;color:black;">star_border</i>
             </div>
             <div class="col-xs-6 text-center">
                 <i class="material-icons button" draggable="true" ondragend="line()" style="font-size:60px;color:black;">remove</i>
