--- a/index.html
+++ b/index.html
@@ -63,21 +63,20 @@
                 <i class="material-icons button" id="lineButton"
                    style="font-size:60px;color:black;">remove</i>
             </div>
-            <!-- Modal -->
+
             <div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog modal-sm">
-
-                    <!-- Modal content-->
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                             <h4 class="modal-title">Select color</h4>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body text-center">
                             <form class="navbar-form navbar">
-                                <label for="palette">Border: </label>
+                                <label for="palette">Border:&nbsp;</label>
                                 <input type="color" id="palette" name="color" value="#000000"/>
-                                <label for="palette2">Fill: </label>
+                                <p></p>
+                                <label for="palette2">Fill:&nbsp;</label>
                                 <input type="color" id="palette2" name="color" value="#ffffff"/>
                             </form>
                         </div>
@@ -89,12 +88,34 @@
 
                 </div>
             </div>
-
         </div>
+
         <div class="col-xs-10">
             <div id="canvas"></div>
         </div>
     </div>
+
+    <div class="modal fade" id="resizeModal" role="dialog">
+        <div class="modal-dialog modal-sm">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Resize</h4>
+                </div>
+                <div class="modal-body text-center">
+                    <label for="resizeinput">Insert value between 0.1 and 2</label>
+                    <input id="resizeinput" type="number" step="0.05" name="quantity" min="0.1" max="2" value="1">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="resizeOkBtn" class="btn btn-primary" data-dismiss="modal">Ok</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
 <script src="canvas.js"></script>
 </body>
