--- a/index.html
+++ b/index.html
@@ -38,59 +38,85 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-2" id="toolbar">
-            <div class="col-xs-6 text-center">
-                <i class="material-icons button" id="squareButton"
-                   style="font-size:60px;color:black;">crop_square</i>
+        <div class="col-xs-3 aside-left">
+            <div class="col-xs-4 text-center" id="toolbar-left">
+                <ul class="nav">
+                    <li class="active button-left">
+                        <a data-toggle="tab" href="#toolbar">
+                            <i class="material-icons" style="font-size:48px;color:black;">create</i>
+                        </a>
+                    </li>
+                    <li class="button-left">
+                        <a data-toggle="tab" href="#toolbar2">
+                            <i class="material-icons" style="font-size:48px;color:black;">backup</i>
+                        </a>
+                    </li>
+                </ul>
             </div>
-            <div class="col-xs-6 text-center">
-                <i class="material-icons button" id="rectangleButton"
-                   style="font-size:60px;color:black;">crop_5_4</i>
-            </div>
-            <div class="col-xs-6 text-center">
-                <i class="material-icons button" id="circleButton"
-                   style="font-size:60px;color:black;">panorama_fish_eye</i>
-            </div>
-            <div class="col-xs-6 text-center">
-                <i class="material-icons button" id="triangleButton"
-                   style="font-size:60px;color:black;">change_history</i>
-            </div>
-            <div class="col-xs-6 text-center">
-                <i class="material-icons button" id="starButton"
-                   style="font-size:60px;color:black;">star_border</i>
-            </div>
-            <div class="col-xs-6 text-center">
-                <i class="material-icons button" id="lineButton"
-                   style="font-size:60px;color:black;">remove</i>
-            </div>
-
-            <div class="modal fade" id="myModal" role="dialog">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Select color</h4>
-                        </div>
-                        <div class="modal-body text-center">
-                            <form class="navbar-form navbar">
-                                <label for="palette">Border:&nbsp;</label>
-                                <input type="color" id="palette" name="color" value="#000000"/>
-                                <p></p>
-                                <label for="palette2">Fill:&nbsp;</label>
-                                <input type="color" id="palette2" name="color" value="#ffffff"/>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" id="okbtn" data-dismiss="modal">Ok</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        </div>
+            <div class="tab-content">
+                <div class="col-xs-8 tab-pane fade in active" id="toolbar">
+                    <div class="col-xs-6 text-center">
+                        <i class="material-icons button" id="squareButton"
+                           style="font-size:48px;color:black;">crop_square</i>
+                    </div>
+                    <div class="col-xs-6 text-center">
+                        <i class="material-icons button" id="rectangleButton"
+                           style="font-size:48px;color:black;">crop_5_4</i>
+                    </div>
+                    <div class="col-xs-6 text-center">
+                        <i class="material-icons button" id="circleButton"
+                           style="font-size:48px;color:black;">panorama_fish_eye</i>
+                    </div>
+                    <div class="col-xs-6 text-center">
+                        <i class="material-icons button" id="triangleButton"
+                           style="font-size:48px;color:black;">change_history</i>
+                    </div>
+                    <div class="col-xs-6 text-center">
+                        <i class="material-icons button" id="starButton"
+                           style="font-size:48px;color:black;">star_border</i>
+                    </div>
+                    <div class="col-xs-6 text-center">
+                        <i class="material-icons button" id="lineButton"
+                           style="font-size:48px;color:black;">remove</i>
                     </div>
 
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Select color</h4>
+                                </div>
+                                <div class="modal-body text-center">
+                                    <form class="navbar-form navbar">
+                                        <label for="palette">Border:&nbsp;</label>
+                                        <input type="color" id="palette" name="color" value="#000000"/>
+                                        <p></p>
+                                        <label for="palette2">Fill:&nbsp;</label>
+                                        <input type="color" id="palette2" name="color" value="#ffffff"/>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary" id="okbtn" data-dismiss="modal">Ok
+                                    </button>
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
+
+                <div class="col-xs-8 tab-pane fade text-center" id="toolbar2">
+                    <div class="col-xs-6 text-center">
+                        <input type="file" id="filepicker" name="fileList" webkitdirectory multiple />
+                        <ul id="listing"></ul>
+                    </div>
+                </div>
+
             </div>
         </div>
-
-        <div class="col-xs-10">
+        <div class="col-xs-9">
             <div id="canvas"></div>
         </div>
     </div>
