--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                 </div>
 
                 <div class="col-xs-8 tab-pane fade text-center" id="toolbar2">
-                    <div class="col-xs-6 text-center">
-                        <input type="file" id="filepicker" name="fileList" webkitdirectory multiple />
-                        <ul id="listing"></ul>
-                    </div>
+                    <label class="btn btn-default">Browse
+                        <input type="file" id="filepicker" name="fileList" webkitdirectory multiple/>
+                    </label>
+                    <div class="col-xs-12 text-center" id="listing"></div>
                 </div>
 
             </div>
